fixed text wrap and removed reg no

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,10 +100,6 @@ h6 {
   font-weight: bold;
 }
 
-.no-wrap-text {
-  white-space: nowrap;
-}
-
 p {
   margin: 0 !important;
 }
